# movies_auth_service

./: .env.example  .env.test  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-base.yml  docker-compose-local.yml  docker-compose-prod.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: code-checker.yaml
migrations/: env.py
migrations/versions/: 3b6dc88e5bc2_initial.py  6b31ec1d2814_initial_migration.py  8ef4b3239c07_initial_migration.py  a22716dba8ca_create_login_history.py  a8c2301907b5_initial.py  aa15c0dc0e24_.py  b214f54d3781_create_table_social_account.py  ce1e08854600_initial.py  ec609b56f6b4_delete_colum_login.py
nginx/: Dockerfile  app.conf  nginx.conf
src/: __init__.py  app.py  config.py  routes.py
src/api/base/dto/: base.py  change_data.py  email_confirmation.py  login_history.py  logout.py  refresh_token.py  role.py  send_code.py  user.py
src/api/base/models/: login_history.py  role.py  user.py
src/api/endpoints/srv/roles/: check_permissions.py  create_new_role.py  delete_role.py  roles.py
src/api/technical/: ping.py
src/api/v1/: ping.py
src/api/v1/auth/: checking_mail.py  dto.py
src/api/v1/dto/: change_data.py  delete_account.py  email_confirmation.py  login_history.py  logout.py  refresh_token.py  role.py  send_code.py  user.py
src/api/v1/endpoints/: change_data.py  change_password.py  delete_account.py  email_confirmation.py  get_list_login_history.py  get_user.py  sign_up.py
src/api/v1/models/: base.py  dto.py  login_history.py  response.py  role.py  user.py
src/api/v2/endpoints/: add_role.py  checking_rights.py
src/common/: check_device.py  check_password.py  check_token.py  collections.py  datetime_util.py  decode_auth_token.py  decorators.py  exceptions.py  gen_password.py  generate_auth_token.py  jwt_decorator.py  pagination.py  rate_limite.py  response.py  send_email.py  tracer.py  utils.py
src/common/services/: oauth_service.py
src/common/utils/: generate_auth_token.py
src/db/: __init__.py  db_factory.py  db_models.py  redis.py
src/models/: __init__.py  db_models.py  role.py  user.py
src/repositories/: auth_repository.py  role_repository.py
src/schemas/: __init__.py  user.py
src/services/: auth_service.py  google_oauth_service.py  models.py  oauth_service.py  role_service.py  vk_oauth_service.py  yandex_oauth_service.py
src/settings/: __init__.py  config.py  services.py
tests/: Dockerfile
tests/functional/: conftest.py
tests/functional/vars/: auth.py  login_history.py  oauth.py  roles.py  tables.py
(+60 files in other folders)
