[tool.poetry]
name = "auth-sprint-1"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "auth_sprint_1"}]

[tool.poetry.dependencies]
python = "~3.10"
flask = {extras = ["async"], version = "^2.2.3"}
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.6"
redis = {extras = ["hiredis"], version = "^4.5.4"}
gunicorn = "^20.1.0"
gevent = "^22.10.2"
flask-restx = "^1.1.0"
flask-security = "^3.0.0"
flask-jwt-extended = "^4.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    .venv
)/
'''

[tool.isort]
line_length = 79
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
skip = [".venv",]
