[tool.poetry]
name = "auth-sprint-1"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "auth_sprint_1"}]

[tool.poetry.dependencies]
python = "~3.10"
flask = {extras = ["async"], version = "^2.2.3"}
sqlalchemy = "^2.0.8"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.6"
redis = {extras = ["hiredis"], version = "^4.5.4"}
gunicorn = "^20.1.0"
gevent = "^22.10.2"
flask-restx = "^1.1.0"
flask-security = "^3.0.0"
flask-jwt-extended = {extras = ["asymmetric-crypto"], version = "^4.4.4"}
python-dotenv = "^1.0.0"
Flask-SQLAlchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-cors = "^3.0.10"
pyjwt = "^2.6.0"
pydantic = "^1.10.7"
orjson = "^3.8.10"
cryptography = "^40.0.1"
flask-mail = "^0.9.1"
pyyaml = "^6.0"
ua-parser = "^0.16.1"
user-agents = "^2.2.0"
requests = "^2.31.0"
pyrate-limiter = "^2.10.0"
opentelemetry-api = "^1.17.0"
opentelemetry-sdk = "^1.17.0"
opentelemetry-instrumentation-flask = "^0.38b0"
opentelemetry-exporter-jaeger = "^1.17.0"
opentelemetry-instrumentation-requests = "^0.38b0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
# linters
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    .venv
    | venv
    | migrations
)/
'''

[tool.isort]
line_length = 79
combine_as_imports = true
include_trailing_comma = true
lines_after_imports = 2
skip = [".venv", "venv", "migrations"]
